--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,6 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="/static/script.js"></script>
 </body>
 </html>
